...
                            fontWeight: FontWeight.w500,
                          ),
                        ),
                ),
                TvFocus(
                  child: IconButton(
                    key: const Key('openSettings'),
                    focusNode: actionFocus,
                    tooltip: strings.settings,
                    onPressed: () => onSettings(),
                    icon: const Icon(Icons.settings_outlined),
                  ),
                ),
...
